tests/invalid/generated_binop_floordiv_bool_float/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bool = True
    y: float = 1.0
    z = x // y
